# fast-photo-viewer

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
installer/: setup.iss
src/: main.rs  video_player.rs
