[package]
name = "fast-photo-viewer"
version = "0.3.0"
edition = "2021"
description = "A fast, lightweight photo and video viewer"
repository = "https://github.com/davidgiang1/fast-photo-viewer"

[build-dependencies.winres]
version = "0.1"

[dependencies]
eframe = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui-video = "0.9"
image = { version = "0.25" }
walkdir = "2"
rand = "0.8"
rfd = "0.15"
ffmpeg-the-third = "2.0"
