[package]
name = "fast-photo-viewer"
version = "0.3.2"
edition = "2021"
description = "A fast, lightweight photo and video viewer"
repository = "https://github.com/davidgiang1/fast-photo-viewer"

[build-dependencies.winres]
version = "0.1"

[dependencies]
eframe = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui-video = "0.9"
image = { version = "0.25" }
walkdir = "2"
rand = "0.8"
rfd = "0.15"
ffmpeg-the-third = "2.0"
rawloader = "0.37"
imagepipe = "0.5"

# Patched locally: upstream 2.0.1 panics in
# software::resampling::context::Context::get_with2 when the source audio
# stream has ChannelOrder::Unspecified / Custom (common in iPhone AAC),
# because ChannelLayout::mask() returns None and the crate unwraps it.
[patch.crates-io]
ffmpeg-the-third = { path = "vendor/ffmpeg-the-third" }
